Updating experiment 1